syntax = "proto3";

//option csharp_namespace = "GrpcGreeter";

package greet.v1;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

service GreeterResponseStream{
  rpc SayHello (HelloRequest) returns (stream HelloReply);
}

service GreeterRequestStream{
  rpc SayHello (stream HelloRequest) returns (HelloReply);
}

service GreeterAllStream{
  rpc SayHello (stream HelloRequest) returns (stream HelloReply);
}